[gd_scene load_steps=3 format=3 uid="uid://cbnfgtx508iop"]

[ext_resource type="Script" path="res://carril.gd" id="1_3wh4e"]
[ext_resource type="PackedScene" uid="uid://bmktppmuuylsa" path="res://vida.tscn" id="1_qfgep"]

[node name="Carril" type="VBoxContainer"]
offset_right = 303.0
offset_bottom = 55.0
script = ExtResource("1_3wh4e")

[node name="Accion" type="Button" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "restar 10"

[node name="botonAreaAtaque" type="Button" parent="."]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2

[node name="EspVida" type="Button" parent="."]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2

[node name="Barra de Vida" parent="." instance=ExtResource("1_qfgep")]
position = Vector2(8, 102)
scale = Vector2(0.9, 0.9)

[node name="Vida" parent="Barra de Vida" index="0"]
custom_minimum_size = Vector2(80, 0)
offset_left = 0.0
offset_top = 0.0
offset_right = 318.0
offset_bottom = 27.0

[connection signal="pressed" from="Accion" to="." method="_on_accion_pressed"]
[connection signal="pressed" from="EspVida" to="." method="_on_esp_vida_pressed"]

[editable path="Barra de Vida"]
